# simple_db

./: .gitignore  Makefile  README.md  dockercompose.yml  pyproject.toml
docs/: API_DOCUMENTATION.md  DATABASE_DESIGN.md  PROJECT_STRUCTURE.md
scripts/: seed_items.py  seed_users.py
src/app/: main.py
src/app/db/: engine.py  models.py  session.py
src/simple_db/: config.py  database.py  main.py
src/simple_db/api/: items.py  users.py
src/simple_db/models/: __init__.py  item.py  user.py
src/simple_db/schemas/: __init__.py  item.py  user.py
src/simple_db/services/: item_service.py  user_service.py
